--- a/testing on git/index.html
+++ b/testing on git/index.html
@@ -10,6 +10,8 @@
    <div class="container">
     <h1>here I am</h1>
     <p>loren ipsums</p>
+    <h3>I am currently working on git</h3>
+    <h3>Have a good Day</h3>
    </div> 
 </body>
 </html>
