add a hello world message

--- a/testing on git/index.html
+++ b/testing on git/index.html
@@ -12,6 +12,8 @@
     <p>loren ipsums</p>
     <h3>I am currently working on git</h3>
     <h3>Have a good Day</h3>
+    <h2>How are you?</h2>
+    <p>hello world</p>
    </div> 
 </body>
 </html>
