--- a/testing on git/index.html
+++ b/testing on git/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing on git</title>
+    <style>
+         h3{
+            color:blue;
+         }
+    </style>
 </head>
 <body>
    <div class="container">
     <h1>here I am</h1>
     <p>loren ipsums</p>
-    <h3 style="color:blue;">I am currently working on git!</h3>
+    <h3>I am currently working on git!</h3>
     <h3>Have a good Day</h3>
     <h2>How are you?</h2>
     <p>hello world</p>
